Next version
  - INT 21h AH=4Ah resize memory: Fix bug where, if asked to resize a previously
    freed memory block and the block is not the last block in the MCB chain,
    and the next block in the MCB chain is also free, the MCB management code
    would correctly compact free blocks but then allocate according to the
    old size of the freed MCB block, causing truncation of the MCB chain.
    Fix for MCB chain truncation caused by California Games II DOS memory
    management when running in Tandy graphics mode. (joncampbell123).
  - Add dosbox.conf option, disabled by default, where if the MCB memory
    chain is corrupted anywhere past the running program's memory block,
    and it does anything to cause allocation, a new free memory block is
    created to satisfy allocations instead of halting emulation. Some DOS
    programs are a bit sloppy in a way that can corrupt the MCB chain.
    When enabled, this behavior matches apparent MS-DOS behavior (joncampbell123).
  - Debugger: DOS MCBS command now also prints the segment immediately
    following the last MCB block (joncampbell123).
  - Tseng ET3000/ET4000: Update Status register 3DAh behavior when emulating
    Tseng chipsets to reflect Tseng datasheet, and VGAKIT SVGA detection code
    expectations. Bit 7 is expected, as documented by Tseng, to be the inverse
    of bit 3 (vertical retrace). Extended Start Register CRTC 33h must not
    allow setting the upper 4 bits because Tseng only documents the bottom
    four, and because VGAKIT requires it for Tseng detection (joncampbell123).
  - Fix bug that, for machine=hercules, prevented Hercules palette shortcut
    from changing colors when in graphics mode (joncampbell123).
  - Remove mixer and VGA capture test modes from integration device. Update
    integration device version number. Convert hardcoded magic constants used
    in IG into constants in iglib.h which is now shared explicitly with the